# android-cmake-sample

./: .gitignore  README.md  build.gradle.kts
app/: build.gradle  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Calculator.cpp  Calculator.h  native-lib.cpp
app/src/main/java/fr/bowserf/cmakesample/: Calculator.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
article/: article.md
gradle/wrapper/: gradle-wrapper.properties
shared_library/: .gitignore  CMakeLists.txt  library_build.sh
shared_library/include/: Addition.h
shared_library/src/: Addition.cpp
static_library/: CMakeLists.txt  library_build.sh
static_library/include/: Subtraction.h
static_library/src/: Subtraction.cpp
subdirectory/: CMakeLists.txt
subdirectory/include/: Multiply.h
subdirectory/src/: Multiply.cpp
